# lmem-significance

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yaml  LICENSE  README.md  pyproject.toml  testfield.ipynb
.github/workflows/: coverage.yml
significance_analysis_example/: analysis_example.ipynb  benchmark_clustering.ipynb  example_analysis.ipynb  sanity_checks.ipynb  synthetic_data_graphics.ipynb  trend_analysis.ipynb
significance_analysis_example/datasets/: priorband_data.parquet
significance_analysis_example/datasets/benchmark_clusterings/: benchmark_clust_allpriors_int.parquet  benchmark_clust_at25bad_full.parquet  benchmark_clust_at25bad_int.parquet
significance_analysis_example/datasets/fig5/: fig5_anon.parquet  fig5_full.parquet  fig5_full_anon.parquet
significance_analysis_example/datasets/fig7/: fig7_24_at25_bad_intsteps.parquet  fig7_anon.parquet  fig7_full.parquet  fig7_full_anonymized.parquet
src/significance_analysis/: __init__.py  dataset_management.py  significance_analysis_function.py  tools.py
tests/: .coverage  metafeature_test.py  sanity_test.py
tests/reports/: .coverage  badge_generator.bat  coverage.xml
tests/reports/junit/: junit.xml  report.html
workshop_paper/: dataset_head.ipynb  plot_generator.ipynb
