[project]
name = "significance_analysis"
version = "v0.2.5"
description = "Significance Analysis for HPO-algorithms performing on multiple benchmarks"
authors = [
    { name = "Anton Merlin Geburek", email = "gebureka@cs.uni-freiburg.de" },
    { name = "Danny Stoll", email = "stolld@cs.uni-freiburg.de" },
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
keywords = [
    "Hyperparameter Optimization",
    "AutoML",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pymer4>=0.8.0,<0.9",
    "matplotlib<3.7.0",
    "typing-extensions>=4.12.2,<5",
    "autorank>=1.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=2.21.0,<3",
    "mypy>=0.930,<0.931",
    "pytest>=8.3.3,<9",
    "pytest-html>=4.1.1,<5",
    "genbadge>=1.1.1,<2",
    "defusedxml>=0.7.1,<0.8",
    "coverage>=7.6.2,<8",
]

[tool.hatch.build.targets.sdist]
include = ["src/significance_analysis"]

[tool.hatch.build.targets.wheel]
include = ["src/significance_analysis"]

[tool.hatch.build.targets.wheel.sources]
"src/significance_analysis" = "significance_analysis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 90
target-version = ['py310']

[tool.isort]
profile = 'black'
line_length = 90

[tool.mypy]
files = ["todo"]
namespace_packages = true
follow_imports = "skip"
ignore_missing_imports = true
show_error_codes = true
incremental = false
explicit_package_bases = true

[tool.pylint.messages_control]
disable = 'all'
enable = [
    'invalid-characters-in-docstring','wrong-spelling-in-comment','wrong-spelling-in-docstring','not-in-loop',
    'function-redefined','continue-in-finally','abstract-class-instantiated','star-needs-assignment-target',
    'duplicate-argument-name','return-in-init','too-many-star-expressions','nonlocal-and-global',
    'return-outside-function','return-arg-in-generator','invalid-star-assignment-target','bad-reversed-sequence',
    'nonexistent-operator','yield-outside-function','init-is-generator','nonlocal-without-binding','lost-exception',
    'assert-on-tuple','dangerous-default-value','duplicate-key','useless-else-on-loop','expression-not-assigned',
    'confusing-with-statement','unnecessary-lambda','pointless-statement','unnecessary-pass','unreachable','eval-used',
    'exec-used','using-constant-test','deprecated-lambda','blacklisted-name','misplaced-comparison-constant',
    'singleton-comparison','unneeded-not','ßconsider-iterating-dictionary','consider-using-enumerate','empty-docstring',
    'unidiomatic-typecheck','condition-evals-to-constant','consider-using-generator','nan-comparison',
    'consider-using-min-max-builtin','consider-using-with','invalid-all-format','consider-using-dict-items',
    'deprecated-decorator','forgotten-debug-statement','useless-with-lock',
    'use-implicit-booleaness-not-comparison','not-async-context-manager','yield-inside-async-function',
    'await-outside-async','invalid-unary-operand-type','unsupported-binary-operation','not-callable',
    'redundant-keyword-arg','assignment-from-no-return','assignment-from-none','not-context-manager',
    'repeated-keyword','missing-kwoa','no-value-for-parameter','invalid-sequence-index','invalid-slice-index',
    'unexpected-keyword-arg','unsupported-membership-test','unsubscriptable-object','bad-except-order',
    'catching-non-exception','bad-exception-context','notimplemented-raised','raising-bad-type','raising-non-exception',
    'misplaced-bare-raise','duplicate-except','nonstandard-exception','binary-op-exception','bare-except',
    'raise-missing-from','consider-using-namedtuple-or-dataclass','consider-using-tuple','bad-open-mode',
    'redundant-unittest-assert','boolean-datetime','deprecated-methodimport-error','import-self','reimported',
    'relative-import','deprecated-module','wildcard-import','misplaced-future','cyclic-import','wrong-import-position',
    'ungrouped-imports','multiple-imports','simplifiable-condition','len-as-condition',
    'unpacking-non-sequence','invalid-all-object','unbalanced-tuple-unpacking','undefined-variable',
    'undefined-all-variable','used-before-assignment','cell-var-from-loop','global-variable-undefined',
    'redefined-builtin','redefine-in-handler','unused-import','unused-argument','unused-wildcard-import',
    'unused-variable','global-variable-not-assigned','undefined-loop-variable','global-statement',
    'global-at-module-level','format-needs-mapping','truncated-format-string','missing-format-string-key',
    'mixed-format-string','too-few-format-args','bad-str-strip-call','too-many-format-args','bad-format-character',
    'format-combined-specification','bad-format-string-key','bad-format-string','missing-format-attribute',
    'missing-format-argument-key','unused-format-string-argument','unused-format-string-key','invalid-format-index',
    'f-string-without-interpolation','use-maxsplit-arg','anomalous-unicode-escape-in-string',
    'anomalous-backslash-in-string','redundant-u-string-prefix','format-string-without-interpolation',
    'simplifiable-if-statement','logging-format-truncated','logging-too-few-args','logging-too-many-args',
    'logging-unsupported-format','not-an-iterable','not-a-mapping','use-sequence-for-iteration','bad-indentation',
    'unnecessary-semicolon','missing-final-newline','mixed-line-endings','multiple-statements','trailing-newlines',
    'trailing-whitespace','unexpected-line-ending-format','superfluous-parens','access-member-before-definition',
    'method-hidden','assigning-non-slot','duplicate-bases','inconsistent-mro','inherit-non-class','invalid-slots',
    'invalid-slots-object','no-method-argument','no-self-argument','unexpected-special-method-signature',
    'non-iterator-returned','invalid-length-returned','protected-access','attribute-defined-outside-init',
    'abstract-method','bad-staticmethod-argument','non-parent-init-called','super-init-not-called',
    'no-classmethod-decorator','no-staticmethod-decorator','no-self-use','bad-classmethod-argument',
    'bad-mcs-classmethod-argument','bad-mcs-method-argument','method-check-failed','invalid-bool-returned',
    'invalid-index-returned','invalid-repr-returned','invalid-str-returned','invalid-bytes-returned',
    'invalid-hash-returned','invalid-length-hint-returned','invalid-format-returned','invalid-getnewargs-returned',
    'invalid-getnewargs-ex-returned','super-with-arguments','deprecated-class','invalid-class-object',
    'unused-private-member',
]
